--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
     <footer>
-        Made with ❤️ in London.
+        Made with ❤️ in 🇳🇬 Nigeria.
     </footer>
     <script src="index.js"></script>
 </body>
